Bundle doesn't generate any activator recognized by cppmicroservices framework.

--- a/bundles/resources-plugin/manifest.json
+++ b/bundles/resources-plugin/manifest.json
@@ -1,5 +1,5 @@
 {
-    "bundle.symbolic_name" : "resources-plugin",
+    "bundle.symbolic_name" : "resources_plugin",
     "bundle.version" : "1.0.0",
     "bundle.activator" : true,
     "bundle.name" : "Service Time SystemClock",
