New function to ease services creation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,15 @@
 cmake_minimum_required(VERSION 3.21)
 project(bismika LANGUAGES CXX VERSION 1.0)
 
+set(CMAKE_CXX_STANDARD 23)
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 include(external_deps)
+
 # --------------------------------------------------------------------------------------------------------
 # Create executable
 # --------------------------------------------------------------------------------------------------------
-
-add_subdirectory(bundles)
 
 add_executable(${PROJECT_NAME}
     bismika.cpp
@@ -31,10 +32,6 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     include/modules
     )
 
-target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_20)
-
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20 CXX_EXTENSIONS OFF CXX_STANDARD_REQUIRED ON)
-
 target_link_libraries(${PROJECT_NAME} PRIVATE saucer::saucer CppMicroServices efsw)
 
 #set_property(TARGET ${PROJECT_NAME} PROPERTY COMPILE_WARNING_AS_ERROR OFF)
@@ -48,3 +45,7 @@ else()
 endif()
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND cmake -E remove "${CMAKE_BINARY_DIR}/plugins/libresources_plugind.so")
+
+
+# Dynamic Shared libraries.
+add_subdirectory(bundles)
