--- a/bundles/resources-plugin/CMakeLists.txt
+++ b/bundles/resources-plugin/CMakeLists.txt
@@ -2,12 +2,21 @@ project(resources_plugin LANGUAGES CXX VERSION 1.0)
 
 set(_bundle_name ${PROJECT_NAME})
 
-GenerateService(${_bundle_name} include/ResourcesPluginActivator.cpp include/ResourcesPluginActivator.h)
+GenerateService(${_bundle_name} src/ResourcesPluginActivator.cpp include/ResourcesPluginActivator.h)
 
 target_include_directories(${PROJECT_NAME} PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/include
   $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
 )
+
+#[[
+if(BUILD_SHARED_LIBS)
+  set_target_properties(${PROJECT_NAME} PROPERTIES
+    CXX_VISIBILITY_PRESET hidden
+    VISIBILITY_INLINES_HIDDEN 1
+    )
+endif()
+]]
 
 file(REMOVE "${CMAKE_BINARY_DIR}/plugins/lib${PROJECT_NAME}.so")
 
